<resources>
    <string name="app_name">ChatbotAvalon</string>
    <string name="edit_text">Type a message</string>
    <string name="button_send">Send</string>
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="regist_redirect">Don\'t have an account? Register</string>
    <string name="regist_title">Register</string>
    <string name="name_hint">Full Name</string>
    <string name="login_redirect">Already have an account? Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sidebar_title">ChatBot</string>
    <string name="hamburger_menu">Hamburger Menu</string>
    <string name="avalon_ai">Avalon AI</string>
    <string name="history">History</string>
    <string name="button_add">Add Attachment</string>
    <string name="button_add_topic">Buat Topik Baru\n</string>
    <string name="logout">Log Out</string>
</resources>