<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#000000"
    android:gravity="center">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regist_title"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_edit_text"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#0077B6"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#0077B6"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edit_text"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#0077B6"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_title"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_redirect"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp" />
</LinearLayout>